--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,6 @@ set -g prefix C-a
 # look good
 set -g default-terminal "screen-256color"
 
-unbind %
 bind | split-window -h
-bind – split-window -v
+bind - split-window -v
 
